rename to APT & YUM
