# docs/swagger.json
@@ -14,7 +14,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/debian/repository/:name/dist/:distro/package/:package/section/:section/version/:version/release/:release/arc/:arc": {
+        "/apt/repository/:name/dist/:distro/package/:package/section/:section/version/:version/release/:release/arc/:arc": {
             "delete": {
                 "description": "Deletes a specific package from the repository",
                 "produces": [
@@ -100,7 +100,7 @@
                 }
             }
         },
-        "/debian/repository/:repository/dist/:dist/package/:package/section/:section/version/:version": {
+        "/apt/repository/:repository/dist/:dist/package/:package/section/:section/version/:version": {
             "delete": {
                 "description": "Deletes all packages within specific section and version across multiple architectures",
                 "produces": [
@@ -173,7 +173,7 @@
                 }
             }
         },
-        "/debian/repository/{name}/dist/{dist}/section/{section}": {
+        "/apt/repository/{name}/dist/{dist}/section/{section}": {
             "post": {
                 "description": "Uploads a Debian package to a named debian repository",
                 "consumes": [
